force-app/main/default/objects/JSONWebTokenAttributes__mdt/JSONWebTokenAttributes__mdt.object-meta.xml
<CustomObject>
    <description>This metadata holds the required parameters that can be fetched while initiating the authentication request(CIBA)</description>
    <label>JSONWebTokenAttributes</label>
    <pluralLabel>JSONWebTokenAttributes</pluralLabel>
</CustomObject>