force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Algorithm__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Algorithm Encoded in the header.</description>
    <label>Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RS256</fullName>
                <default>true</default>
                <label>RS256</label>
            </value>
            <value>
                <fullName>RS512</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>