force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>JWT Audience of the Request.</description>
    <label>Audience</label>
    <type>Url</type>
</CustomField>