force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/AuthContext__c.field-meta.xml
<CustomField>
    <fullName>AuthContext__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Auth Context for AEGIS to identify</description>
    <label>Authorisation Request</label>
    <length>15</length>
    <type>Text</type>
</CustomField>