force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/BindingMessage__c.field-meta.xml
<CustomField>
    <fullName>BindingMessage__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Default Message to be displayed to the customer.</description>
    <label>Binding Message</label>
    <length>50</length>
    <type>Text</type>
</CustomField>