force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>JSON Web Token Issuer</description>
    <label>Issuer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>