force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/KeyIdentification__c.field-meta.xml
<CustomField>
    <fullName>KeyIdentification__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Key Identifier for Cert used for Signing JSON Web Token.</description>
    <label>Key Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>