force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/LoginHint__c.field-meta.xml
<CustomField>
    <fullName>LoginHint__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Field Reference which need to be supplied to identify the Customer.</description>
    <label>Login Hint</label>
    <length>50</length>
    <type>Text</type>
</CustomField>