force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Scope of the Request</description>
    <label>Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>