force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/SigningCertificateDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SigningCertificateDeveloperName__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Signing JWT using the Developer Name from Certificate and Key Management.</description>
    <label>Signing Certificate Developer Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>