force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>JSON Web Token Subject</description>
    <label>Subject</label>
    <length>20</length>
    <type>Text</type>
</CustomField>