force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Type of Token</description>
    <label>Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>