force-app/main/default/objects/JSONWebTokenAttributes__mdt/fields/ValidFor__c.field-meta.xml
<CustomField>
    <fullName>ValidFor__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>JSON Web Token validity in Seconds</description>
    <label>Valid For</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>